--- a/funkcje/index.html
+++ b/funkcje/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <!--<script src="./js/main.js"></script>-->
-    <script src="./js/main1.js"></script>
+    <!--<script src="./js/main1.js"></script>-->
+    <!--<script src="./js/main2.js"></script>-->
+    <script src="./js/main3.js"></script>
 </body>
 </html>
