Added DOM file contain added dynamic elements for html file.

--- a/DOM _tworzenieElementów/index.html
+++ b/DOM _tworzenieElementów/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM Dodawanie elemntów</title>
+    <title>DOM Pobieranie elementów</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<h1>Pobieranie elementów</h1>
+<br> <hr><br>
+<li id="item"> To LI ma ID.</li><br>
+<li>To LI bez klasy i ID</li><br>
+<li class="item-class">LI z klasą.</li><br>
+<li class="item-class">LI z klasą.</li><br>
+<li>To LI bez klasy i ID</li><br>
 <div class="creatElement">
     
 </div>
