--- a/DOM _addEvenListener/index.html
+++ b/DOM _addEvenListener/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <h1>addEvenListener</h1>
-    <button class="btn1">Kliknij mnie!</button>
-    <button class="btn2">Najechano na mnie</button>
-    <button class="btn3">Kliknięto mnie 2razy!</button>
+    <br>
+    <br>
+    <div>
+        <button class="btn1">Dodaj</button>
+        <button class="btn2">Usuń</button>
+        <button class="btn3">Toggle</button>
+    <br>
+    <p>Jakiś tekst</p>
+    </div>
 
 
     <script src="./js/main.js"></script>
