Added toggle button to add even listener.

--- a/DOM _zadania/index.html
+++ b/DOM _zadania/index.html
@@ -11,6 +11,7 @@
 <h2>zadanie2</h2>
 <button class="btn1">pokaż</button>
 <button class="btn2">ukryj</button>
+<button class="btn3">pokaż/ukryj</button>
 <p class="text">Jakiś tekst</p>
     <script src="./js/main.js"></script>
 
