--- a/dziedziczenie/indeks.html
+++ b/dziedziczenie/indeks.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>obiekty: łączenie</title>
+    <title>obiekty: get/set</title>
     <script src="https://kit.fontawesome.com/ea96569da2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
     <h1>OBIEKTY</h1><br>
     <hr>
-    <h2>Łączenie obiektów</h2>
+    <h2>get/set</h2>
 
     <script src="./js/main.js"></script>
 </body>
